Mon Aug 25 22:41:47 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* eval.c (set_BINMODE): Tighten up the code to only allow
	certain reasonable values when setting BINMODE.

Fri Aug 22 14:43:49 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (nextfile): Users Strong In The Ways Of The Source can use
	non-existant files on the command line without it being a fatal error.

Wed Jul 30 23:10:51 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* re.c (research): Don't ever use DFA if need_start. It can
	break on some weird cases.  Reported by
	 "T. X. G." <leopardie333@yahoo.com>.

Wed Jul 30 22:27:20 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (do_match): Add MAYBE_NUM flag to elements of array
	created by `match' since data could come from user. Similar
	semantics to `split'. Thanks to Dr. Dirk Zimoch <dirk.zimoch@psi.ch>
	for reporting the bug.

Tue Jun 24 07:44:06 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* dfa.c (insert): Reworked for significant speed improvement
	by Johan Walles <johan.walles@gmail.com>. Imported from grep
	bug list.
	* profile.c (tree_eval): Do a return after all the built-in
	variables instead of a break. Thanks again to Hermann Peifer
	<peifer@gmx.eu> for finding the problem.

Sun Jun 22 23:08:14 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* node.c (format_val): Restore old code to use %ld when the value
	is within the range of a long; improves performance noticably for
	applications that convert integers to strings.  Use %.0f only for
	integral values that are outside the range of a long. Thanks to
	Hermann Peifer <peifer@gmx.eu> for pointing out the existence
	of a problem.

Fri May 23 12:08:24 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* dfa.c (epsclosure): Change type of `visited' from int to char for
	potential speedup. Based on bug report to bug-grep list from
	Johan Walles <johan.walles@gmail.com>.

Wed May 14 05:55:48 2008  Arnold D. Robbins  <arnold@skeeve.com>
