@@ -1,3 +1,8 @@
+Sun Aug 31 22:03:55 2008  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* eval.c (set_BINMODE): Tighten up the code to even more so
+	that it matches the documentation.
+
 Mon Aug 25 22:41:47 2008  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* eval.c (set_BINMODE): Tighten up the code to only allow
